<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/videoScreen"
        android:layout_width="390dp"
        android:layout_height="330dp"
        android:layout_marginTop="1dp"
        android:background="#00F00909"
        android:elegantTextHeight="false"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:autoSizeTextType="none"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/leftButton"
        style="@android:style/Widget.Material.Light.Button.Inset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonLeft_txt"
        app:layout_constraintRight_toLeftOf="@+id/upButton"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/upButton"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toTopOf="@+id/downButton"
        android:layout_marginLeft="8dp"
        app:layout_constraintVertical_bias="0.333"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/downButton"
        style="@android:style/Widget.Material.Light.Button.Inset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonBackward_txt"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/leftButton"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/rightButton"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/upButton"
        />

    <Button
        android:id="@+id/upButton"
        style="@android:style/Widget.Material.Light.Button.Inset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonForward_txt"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/videoScreen"
        app:layout_constraintVertical_bias="0.234"
        />

    <Button
        android:id="@+id/rightButton"
        style="@android:style/Widget.Material.Light.Button.Inset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonRight_txt"
        app:layout_constraintLeft_toRightOf="@+id/upButton"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/upButton"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toTopOf="@+id/downButton"
        android:layout_marginRight="8dp"
        app:layout_constraintVertical_bias="0.333"
        app:layout_constraintRight_toRightOf="parent"
        />

    <Button
        android:id="@+id/buttonStop"
        android:layout_width="91dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="?attr/colorError"
        android:text="@string/buttonStop_txt"
        android:textColor="?android:attr/colorForeground"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonStart" />

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="80dp"
        android:background="?attr/colorError"
        android:text="@string/buttonStart_txt"
        android:textColor="?android:attr/colorForeground"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>